fixed spacing in the header

--- a/components/common/style.module.scss
+++ b/components/common/style.module.scss
@@ -11,6 +11,7 @@
 
 .dropdown_list {
   width: max-content;
+  max-width: 274px;
   position: absolute;
   border: 1px solid;
   border-radius: 4px;
